# AgenteIA_OrdenarTarea

./: README.md  pyproject.toml  requirements.txt
data/: tasks.json
src/agenteIA_OrdenarTarea/: agent.py  database.py  excepciones.py  main.py  models.py
src/agenteIA_ordenarTarea.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
